--- a/angularprgms/first-project/src/app/app.component.html
+++ b/angularprgms/first-project/src/app/app.component.html
@@ -12,3 +12,9 @@
     <app-studentdetails></app-studentdetails>
 
    <button [disabled]="isUnchanged">Disabled button</button>
+
+   <p [class]='allclass'>this is a bounded class</p>
+
+   <button [class]='buttonclass'>Click Me!</button>
+   <br>
+   <label for="name" [class]='buttonclass'>Rohit</label>
