--- a/angularprgms/validationdemo/src/app/heroform/heroform.component.html
+++ b/angularprgms/validationdemo/src/app/heroform/heroform.component.html
@@ -10,6 +10,11 @@
             <label for="alterEgo">Alter Ego</label>
             <input type="text" class="form-control" id="alterEgo">
         </div>
+        <div class="form-group">
+            <label for="address">Address</label>
+            <input type="text" class="form-control" id="adress" required>
+        </div>
         
+        <button type="submit" class="btn btn-success">Submit</button>
     </form>
 </div>
